--- a/efuel/package.json
+++ b/efuel/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.0.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.11",
     "@types/node": "18.0.0",
     "@types/react": "18.0.13",
     "@types/react-dom": "18.0.5",
