--- a/efuel/package.json
+++ b/efuel/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "form-data": "^4.0.0",
+    "leaflet-geosearch": "^3.6.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
