--- a/efuel/package.json
+++ b/efuel/package.json
@@ -2,6 +2,10 @@
   "name": "efuel",
   "version": "0.1.12",
   "private": true,
+  "engines": {
+    "node": ">=16.15.1 <=18.3.0",
+    "npm": "~8.11.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
