--- a/efuel/package.json
+++ b/efuel/package.json
@@ -16,6 +16,7 @@
     "form-data": "^4.0.0",
     "leaflet-geosearch": "^3.6.1",
     "next": "12.1.6",
+    "next-pwa": "^5.5.4",
     "node_extra_ca_certs_mozilla_bundle": "^1.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
