--- a/efuel/package.json
+++ b/efuel/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/xml2js": "^0.4.11",
     "form-data": "^4.0.0",
     "leaflet-geosearch": "^3.6.1",
     "next": "12.1.6",
@@ -20,7 +21,8 @@
     "node_extra_ca_certs_mozilla_bundle": "^1.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-leaflet": "^4.0.0"
+    "react-leaflet": "^4.0.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.11",
