--- a/efuel-web/public/manifest.json
+++ b/efuel-web/public/manifest.json
@@ -1,20 +1,20 @@
 {
     "name": "єПаливо",
-    "short_name": "efuel",
+    "short_name": "єПаливо",
     "icons": [
       {
-        "src": "/icons/android-chrome-192x192.png",
+        "src": "/efuel.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "any maskable"
       },
       {
-        "src": "/icons/android-chrome-384x384.png",
+        "src": "/efuel.png",
         "sizes": "384x384",
         "type": "image/png"
       },
       {
-        "src": "/icons/icon-512x512.png",
+        "src": "/efuel.png",
         "sizes": "512x512",
         "type": "image/png"
       }
