--- a/efuel-mobile/app/build.gradle
+++ b/efuel-mobile/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.efuel"
+        applicationId "com.lyubomyr.efuel"
         minSdk 16
         targetSdk 32
         versionCode 1
@@ -44,4 +44,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+
+
+    implementation 'org.realityforge.javax.annotation:javax.annotation:1.0.1'
+
 }
