--- a/efuel-web/public/manifest.json
+++ b/efuel-web/public/manifest.json
@@ -3,24 +3,24 @@
     "short_name": "єПаливо",
     "icons": [
       {
-        "src": "/efuel.png",
+        "src": "/efuel_192x192.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "any maskable"
       },
       {
-        "src": "/efuel.png",
+        "src": "/efuel_384x384.png",
         "sizes": "384x384",
         "type": "image/png"
       },
       {
-        "src": "/efuel.png",
+        "src": "/efuel_512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
     ],
-    "theme_color": "#FFFFFF",
-    "background_color": "#FFFFFF",
+    "theme_color": "#000000",
+    "background_color": "#000000",
     "start_url": "/",
     "display": "standalone",
     "orientation": "portrait"
