--- a/efuel-web/public/manifest.json
+++ b/efuel-web/public/manifest.json
@@ -19,8 +19,8 @@
         "type": "image/png"
       }
     ],
-    "theme_color": "#fff",
-    "background_color": "#fff",
+    "theme_color": "#ddd",
+    "background_color": "#ddd",
     "start_url": "/",
     "display": "standalone",
     "orientation": "portrait"
